* 2008-01-07 - thorben.betten@open-xchange.com

 - Bugfix #9996: Proper escaping of HTML entities (includes Japanese
   characters)

* 2007-12-10 - francisco.laguna@open-xchange.com

 - Bugfix #10583: Remove all attachments in a context ONLY on context delete.

* 2007-10-30 - francisco.laguna@open-xchange.com

 - Bugfix #9943: Added DeleteListener that removes all attachments on a ContextDelete.
   Added UpdateTask to clear leftover attachments.

* 2007-10-30 - sebastian.kauss@open-xchange.com

 - Bugfix #9888: Reminder never disappears for recurring appointment

* 2007-10-29 - marcus.klein@open-xchange.com

 - Bugfix #9869: Set default upload quota to infinity.
 - Bugfix #9826: Properly set charset in Content-Type for configuration jump.

* 2007-10-29 - thorben.betten@open-xchange.com

 - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
   into sent folder during message transport
 - Bugfix #9899: Re-building fetch item handlers if item order changes
   during a FETCH response from IMAP server
 - Bugfix #9906: Using safer Iterator.hasNext() method when traversing
   concurrent map. OXTimer is no more interrupted.
 - Bugfix #9922: Fetch ACL list in a safe manner and abort all ACL related
   actions if ACL cannot be determined

* 2007-10-23 - marcus.klein@open-xchange.com

 - Bugfix #9807: Removed throw of ServletException on a not catched Exception.

* 2007-10-22 - ben.pahne@open-xchange.com
  
 - Bugfix #9902: Admin gets not deleted during delete context

* 2007-10-18 - ben.pahne@open-xchange.com

 - Bugfix #9800: Remaining entries inside del table after context delete
 - Bugfix #9581: Delete of all user contacts during the delete user process
   was not working if an unbound contacts occured.

* 2007-10-18 - marcus.klein@open-xchange.com

 - Bugfix #9807: Catching all exceptions now in AJAX super servlet to prevent
   closed AJP sockets.
 - Bugfix #9804: Added mapping for charset x-unknown to US-ASCII.